--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,16 +4,16 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif;
     --font-serif: 'Playfair Display', ui-serif, Georgia, serif;
     
-    --color-primary-50: #fdf4ff;
-    --color-primary-100: #fae8ff;
-    --color-primary-200: #f5d0fe;
-    --color-primary-300: #f0abfc;
-    --color-primary-400: #e879f9;
-    --color-primary-500: #d946ef;
-    --color-primary-600: #c026d3;
-    --color-primary-700: #a21caf;
-    --color-primary-800: #86198f;
-    --color-primary-900: #701a75;
+    --color-primary-50: #fef1f6;
+    --color-primary-100: #fee5ef;
+    --color-primary-200: #ffcce2;
+    --color-primary-300: #ffa3ca;
+    --color-primary-400: #ff6fa8;
+    --color-primary-500: #ff4d94;
+    --color-primary-600: #f72585;
+    --color-primary-700: #e0106d;
+    --color-primary-800: #ba1160;
+    --color-primary-900: #9b1354;
     
     --color-gold-50: #fffbeb;
     --color-gold-100: #fef3c7;
